--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Textile-Fabrics-A-Descriptive-Catalogue-of-the-Collection-of-Church-vestments-Dresses-Silk-St__66172
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 66172-h/images/cover.jpg
 creator:
   author:
     agent_name: Rock, Daniel
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/50734
     wikipedia: https://en.wikipedia.org/wiki/Daniel_Rock
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66172#Textile-Fabrics-A-Descriptive-Catalogue-of-the-Collection-of-Church-vestments-Dresses-Silk-St_
 gutenberg_issued: '2021-08-30'
 identifiers:
   gutenberg: '66172'
